--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -54,6 +54,7 @@ BITCOIN_TESTS =\
   test/equihash_tests.cpp \
   test/getarg_tests.cpp \
   test/hash_tests.cpp \
+  test/joinsplit_tests.cpp \
   test/key_tests.cpp \
   test/main_tests.cpp \
   test/mempool_tests.cpp \
